# todo

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
src/: arguments.rs  config.rs  main.rs  paths.rs  task.rs
src/config/: config.rs  mod.rs  storage_format.rs
src/error/: mod.rs  no_config_error.rs  no_home_error.rs
src/persistence/: file_repository.rs  mod.rs  postgres_repository.rs  ron_file_persistence.rs  sql_repository.rs  sqlite_repository.rs
src/tasks/: mod.rs  new_task.rs  task.rs
