[package]
name = "todo"
version = "0.2.1"
edition = "2024"

[features]
default = ["postgres", "sqlite"]
full = ["postgres", "sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]


[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.17"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
simplelog = "0.12.2"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls"] }
async-trait = "0.1.89"
ron = "0.12.0"
url = { version = "2.5.7", features = ["serde"] }
toml = "0.9.8"
bon = "3.8.2"
